# flatplay

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/: dependabot.yml
src/: build_dirs.rs  command.rs  lib.rs  main.rs  manifest.rs  process.rs  state.rs  utils.rs
