[package]
name = "flatplay"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dialoguer = "0.11.0"
colored = "3.0.0"
walkdir = "2.5.0"
clap_complete = "4.5.55"
regex = "1.11.1"
nix = { version = "0.30.1", features = ["process", "signal"] }

[[bin]]
name = "flatplay"
path = "src/main.rs"

[lib]
name = "flatplay"
path = "src/lib.rs"
