[package]
name = "flatplay"
version = "0.2.2"
authors = ["Mufeed Ali <me@mufeed.dev>"]
description = "Simple CLI tool to build and run Flatpak applications."
readme = "README.md"
license = "MIT"
edition = "2024"
homepage = "https://github.com/mufeedali/flatplay"
repository = "https://github.com/mufeedali/flatplay"
keywords = ["flatpak", "cli", "gnome"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dialoguer = "0.11.0"
colored = "3.0.0"
walkdir = "2.5.0"
clap_complete = "4.5.55"
regex = "1.11.1"
nix = { version = "0.30.1", features = ["process", "signal"] }

[[bin]]
name = "flatplay"
path = "src/main.rs"

[lib]
name = "flatplay"
path = "src/lib.rs"
